# testTask_3

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/config/: settings.py  urls.py
src/frontend/static/css/: styles.css
src/frontend/templates/: base.html
src/weather/: models.py  tests.py  urls.py  views.py
src/weather/api/: pagination.py  serializers.py  views.py
src/weather/api_requests/: weather.py
src/weather/fixtures/: mock_data.json
src/weather/migrations/: 0001_initial.py
src/weather/templates/weather/: index.html
