[project]
name = "weatherapp"
version = "1.0.0"
description = "Application for to get the weather"
authors = [
    {name = "Jaxck",email = "losofst@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "hiredis (>=3.2.1,<4.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
